module(name = "cloud_tasks")

GRPC_VERSION = "1.63.0"

bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "7.0")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_java", version = "5.8.0")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "rules_spring", version = "2.6.3")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "nv_boot_parent", version = "0.0.0")

local_path_override(
    module_name = "nv_boot_parent",
    path = "../../libraries/java/nv-boot-parent",
)

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

# The gRPC generator is a native executable, not a Java dependency. Keep it
# outside the shared Maven hub so fetch_sources applies only to Java artifacts.
http_file(
    name = "grpc_java_plugin_linux_aarch_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "471427565ad82b3caac5e19dba2d15fb75b81042503ea32357630312d1f074b4",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_linux_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "0e3e8db80ba1fbddeed97ea3220b52cfaa95764ff8bf00716df7322883ce47e8",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-linux-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_osx_aarch_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "28290117a2ee9ea60f50f94273ab139dc2b3be4b8f2a557bef7e6efefee5b363",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-aarch_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_osx_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "28290117a2ee9ea60f50f94273ab139dc2b3be4b8f2a557bef7e6efefee5b363",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-osx-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

http_file(
    name = "grpc_java_plugin_windows_x86_64",
    downloaded_file_path = "protoc-gen-grpc-java.exe",
    executable = True,
    sha256 = "c3e9aaefd825a6ea9a252e153e0998d7ef36a7b27c2156867a98c71edf9c18a1",
    urls = [
        "https://maven-central.storage-download.googleapis.com/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-windows-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
        "https://repo.maven.apache.org/maven2/io/grpc/protoc-gen-grpc-java/%s/protoc-gen-grpc-java-%s-windows-x86_64.exe" % (GRPC_VERSION, GRPC_VERSION),
    ],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "nv_third_party_deps",
    # Phase 1 keeps this list to root coordinates needed to compile nvct-core.
    # Versions are omitted when inherited from the imported Maven BOMs/parents.
    # Project-local Maven property pins stay explicit here.
    artifacts = [
        "com.bucket4j:bucket4j_jdk17-core:8.19.0",
        "com.github.ben-manes.caffeine:caffeine",
        "com.github.ben-manes.caffeine:guava",
        # Keep Java protobuf runtime aligned with the Bazel protobuf generator.
        "com.google.protobuf:protobuf-java:4.33.4",
        "com.google.protobuf:protobuf-java-util:4.33.4",
        "io.grpc:grpc-api:%s" % GRPC_VERSION,
        "io.grpc:grpc-protobuf:%s" % GRPC_VERSION,
        "io.grpc:grpc-stub:%s" % GRPC_VERSION,
        "io.micrometer:micrometer-registry-prometheus",
        "io.opentelemetry:opentelemetry-sdk-testing",
        "io.projectreactor.netty:reactor-netty-core",
        "io.projectreactor.netty:reactor-netty-http",
        "jakarta.servlet:jakarta.servlet-api",
        "javax.annotation:javax.annotation-api:1.3.2",
        "net.devh:grpc-server-spring-boot-starter:3.1.0.RELEASE",
        "net.javacrumbs.shedlock:shedlock-provider-cassandra",
        "net.javacrumbs.shedlock:shedlock-spring",
        "org.apache.cassandra:java-driver-metrics-micrometer",
        "org.assertj:assertj-core",
        "org.awaitility:awaitility",
        "org.junit.jupiter:junit-jupiter-api",
        "org.junit.jupiter:junit-jupiter-params",
        "org.junit.platform:junit-platform-console-standalone:6.0.3",
        # Direct Bazel test-tool dependency; Spring Boot's BOM does not manage it.
        "org.jacoco:org.jacoco.agent:jar:runtime:0.8.14",
        "org.jacoco:org.jacoco.cli:0.8.14",
        "org.mockito:mockito-core",
        "org.mockito:mockito-junit-jupiter",
        # JaCoCo report generation needs a Java 25-capable ASM family. Legacy
        # jnr/accessors-smart edges otherwise select ASM 5.0.3 at runtime.
        "org.ow2.asm:asm:9.9",
        "org.ow2.asm:asm-analysis:9.9",
        "org.ow2.asm:asm-commons:9.9",
        "org.ow2.asm:asm-tree:9.9",
        "org.ow2.asm:asm-util:9.9",
        "org.projectlombok:lombok",
        "org.springdoc:springdoc-openapi-starter-webmvc-api:3.0.3",
        "org.springframework.boot:spring-boot-actuator",
        "org.springframework.boot:spring-boot-micrometer-metrics",
        "org.springframework.boot:spring-boot-micrometer-tracing",
        "org.springframework.boot:spring-boot-micrometer-tracing-opentelemetry",
        "org.springframework.boot:spring-boot-opentelemetry",
        "org.springframework.boot:spring-boot-loader",
        "org.springframework.boot:spring-boot-restclient",
        "org.springframework.boot:spring-boot-starter-data-cassandra-test",
        "org.springframework.boot:spring-boot-starter-aspectj",
        "org.springframework.boot:spring-boot-starter-jackson",
        "org.springframework.boot:spring-boot-starter-security",
        "org.springframework.boot:spring-boot-starter-security-oauth2-client",
        "org.springframework.boot:spring-boot-starter-security-oauth2-resource-server",
        "org.springframework.boot:spring-boot-starter-validation",
        "org.springframework.boot:spring-boot-starter-webmvc-test",
        "org.springframework.boot:spring-boot-starter-webmvc",
        "org.springframework.boot:spring-boot-webclient",
        "org.springframework.cloud:spring-cloud-starter-kubernetes-client-config",
        "org.springframework.retry:spring-retry",
        "org.springframework:spring-context-support",
        "org.springframework:spring-webflux",
        "org.testcontainers:testcontainers",
        "org.testcontainers:testcontainers-cassandra",
        "org.testcontainers:testcontainers-localstack",
        "org.wiremock:wiremock-standalone:3.13.2",
        "tools.jackson.module:jackson-module-blackbird",
    ],
    boms = [
        "net.javacrumbs.shedlock:shedlock-bom:7.7.0",
        "org.springframework.boot:spring-boot-dependencies:4.0.7",
        "org.springframework.cloud:spring-cloud-dependencies:2025.1.2",
        "org.testcontainers:testcontainers-bom:2.0.5",
    ],
    fail_on_missing_checksum = True,
    fetch_sources = True,
    known_contributing_modules = [
        "nv_boot_parent",
        "protobuf",
        "rules_proto_grpc_java",
    ],
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven-central.storage-download.googleapis.com/maven2",
        "https://repo.maven.apache.org/maven2",
    ],
    resolver = "maven",
)
use_repo(maven, "nv_third_party_deps")
