# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

exports_files(
    [
        "cassandra_version_consistency_test.sh",
        "image_entrypoint_mode_test.sh",
    ],
    visibility = ["//visibility:public"],
)
