# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

# This directory is a separate Go workspace member (see go.work / api/go.mod).
# Without an explicit prefix Gazelle would inherit the root module's path
# `github.com/hashicorp/consul-template/api`, which is wrong: the submodule is
# `github.com/hashicorp/vault/api`. The prefix below makes Gazelle generate
# the right importpath here and the right local //api dep references in
# sibling packages (api/auth/...).
# gazelle:prefix github.com/hashicorp/vault/api

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api",
    srcs = [
        "auth.go",
        "auth_token.go",
        "client.go",
        "help.go",
        "kv.go",
        "kv_v1.go",
        "kv_v2.go",
        "lifetime_watcher.go",
        "logical.go",
        "nv_helpers.go",
        "output_policy.go",
        "output_string.go",
        "plugin_helpers.go",
        "request.go",
        "response.go",
        "secret.go",
        "ssh.go",
        "ssh_agent.go",
        "sys.go",
        "sys_audit.go",
        "sys_auth.go",
        "sys_capabilities.go",
        "sys_config_cors.go",
        "sys_generate_root.go",
        "sys_hastatus.go",
        "sys_health.go",
        "sys_init.go",
        "sys_leader.go",
        "sys_leases.go",
        "sys_mfa.go",
        "sys_monitor.go",
        "sys_mounts.go",
        "sys_plugins.go",
        "sys_policy.go",
        "sys_raft.go",
        "sys_rekey.go",
        "sys_rotate.go",
        "sys_seal.go",
        "sys_stepdown.go",
    ],
    importpath = "github.com/hashicorp/vault/api",
    visibility = ["//visibility:public"],
    deps = [
        "//sdk/helper/consts",
        "//sdk/helper/hclutil",
        "//sdk/helper/jsonutil",
        "//sdk/helper/logging",
        "//sdk/helper/strutil",
        "//sdk/logical",
        "@com_github_cenkalti_backoff_v3//:backoff",
        "@com_github_go_jose_go_jose_v4//:go-jose",
        "@com_github_go_jose_go_jose_v4//jwt",
        "@com_github_hashicorp_errwrap//:errwrap",
        "@com_github_hashicorp_go_cleanhttp//:go-cleanhttp",
        "@com_github_hashicorp_go_hclog//:go-hclog",
        "@com_github_hashicorp_go_multierror//:go-multierror",
        "@com_github_hashicorp_go_retryablehttp//:go-retryablehttp",
        "@com_github_hashicorp_go_rootcerts//:go-rootcerts",
        "@com_github_hashicorp_go_secure_stdlib_parseutil//:parseutil",
        "@com_github_hashicorp_hcl//:hcl",
        "@com_github_hashicorp_hcl//hcl/ast",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@org_golang_x_net//http2",
        "@org_golang_x_time//rate",
    ],
)

alias(
    name = "go_default_library",
    actual = ":api",
    visibility = ["//visibility:public"],
)

go_test(
    name = "api_test",
    srcs = [
        "api_test.go",
        "auth_test.go",
        "client_test.go",
        "kv_test.go",
        "nv_helpers_test.go",
        "plugin_helpers_test.go",
        "renewer_test.go",
        "request_test.go",
        "response_test.go",
        "ssh_agent_test.go",
        "sys_mounts_test.go",
        "sys_plugins_test.go",
    ],
    # Upstream vault api tests. They depend on a vault binary on PATH,
    # test-fixtures via relative paths, and env-var setup the legacy
    # `go test ./...` runner provided implicitly. ess-agent doesn't own
    # this surface; tag manual so `bazel test //...` skips it, while
    # `bazel build //...` still validates it compiles. Run explicitly
    # via `bazel test //api:api_test` when needed.
    tags = ["manual"],
    embed = [":api"],
    deps = [
        "//sdk/helper/consts",
        "//sdk/helper/strutil",
        "//sdk/logical",
        "@com_github_go_test_deep//:deep",
        "@com_github_hashicorp_go_hclog//:go-hclog",
        "@com_github_stretchr_testify//require",
    ],
)
