# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "nv",
    srcs = [
        "env.go",
        "utils.go",
    ],
    importpath = "github.com/hashicorp/consul-template/nv",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":nv",
    visibility = ["//visibility:public"],
)

go_test(
    name = "nv_test",
    srcs = ["utils_test.go"],
    embed = [":nv"],
)
