# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "service_os",
    srcs = [
        "service.go",
        "service_windows.go",
    ],
    importpath = "github.com/hashicorp/consul-template/service_os",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows/svc",
        ],
        "//conditions:default": [],
    }),
)

alias(
    name = "go_default_library",
    actual = ":service_os",
    visibility = ["//visibility:public"],
)
