# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "test",
    srcs = ["helpers.go"],
    importpath = "github.com/hashicorp/consul-template/test",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_hashicorp_consul_sdk//testutil",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

alias(
    name = "go_default_library",
    actual = ":test",
    visibility = ["//visibility:public"],
)
