# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/NVIDIA/nvcf/src/compute-plane-services/worker-init/service",
    visibility = ["//visibility:public"],
    deps = [
        "//configs",
        "//internal/workerinit",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/config",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/tracing",
        "@com_github_nvidia_nvcf_src_libraries_go_worker//types",
        "@com_github_nvidia_nvcf_src_libraries_go_worker//utils",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_pflag//:pflag",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//configs",
        "//internal/workerinit",
        "@com_github_nvidia_nvcf_src_libraries_go_lib//pkg/nvkit/logs",
        "@com_github_nvidia_nvcf_src_libraries_go_worker//test/testutils",
        "@org_uber_go_zap//:zap",
    ],
)
