load("@rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "spot",
    srcs = ["spot.go"],
    embedsrcs = ["clusterGroups.json"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_goccy_go_json//:go-json",
        "@com_github_google_uuid//:uuid",
        "@com_github_samber_lo//:lo",
    ],
)
